--- a/sn/templates/add_post.html
+++ b/sn/templates/add_post.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Назва - Мої Книги</title>
+        <title>LibNet - Додати Публікацію</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -30,11 +30,12 @@
             <input name="title" id="title" placeholder="Нікнейм" class = "input-value" type="text" value="{{ request.form['title'] }}" style="width: 100%;"  required>
             <br>
             <label style="margin-top: 10px;">Текст посту:</label>
-            <!--
-            <textarea name="body" id="body"  class="input-value textarea" type="text" value="{{ request.form['body'] }}" style="width: 100%; height: 300px; resize: none;" required ></textarea>
-            -->
             
+            <textarea name="body" id="body"  class="input-value textarea" type="text" value="{{ request.form['body'] }}" style="width: 100%; height: 300px; resize: none;" required ></textarea>
+            
+            <!--
             <div id="body" name="body" value="{{ request.form['body'] }}" contenteditable="true" style="height: 50%; width: 100%; border: solid; border-width: 1px; text-align: left;" class="editorSheet"> </div>
+            -->
             
             <br>
             {% for message in get_flashed_messages() %}
