--- a/sn/templates/books.html
+++ b/sn/templates/books.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Назва - Мої Книги</title>
+        <title>LibNet - Мої Книги</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -62,7 +62,7 @@
                 {% endfor %}
             </ol>
           {% else %}
-            <div>У Вас поки що немає книг, які Ви хочете прочитати.</div>
+            <div style="margin-left: 20px;">У Вас поки що немає книг, які Ви хочете прочитати.</div>
           {% endif %} 
           
         {% else %}
@@ -88,7 +88,7 @@
                 {% endfor %}
             </ol>
           {% else %}
-            <div>У Вас поки що немає книг, які Ви прочитали.</div>
+            <div style="margin-left: 20px;">У Вас поки що немає книг, які Ви прочитали.</div>
           {% endif %} 
           
         {% else %}
@@ -114,7 +114,7 @@
                 {% endfor %}
             </ol>
           {% else %}
-            <div>У Вас поки що немає книг, які Ви читаєте.</div>
+            <div style="margin-left: 20px;">У Вас поки що немає книг, які Ви читаєте.</div>
           {% endif %} 
           
         {% else %}
