--- a/sn/static/css/style.css
+++ b/sn/static/css/style.css
@@ -98,6 +98,10 @@ a:active, a:hover{
     margin: 1px 0 1px 0;
 }
 
+.add-class-button: hover{
+    color: #34537b;
+}
+
 .popup {
     position: relative;
     display: inline-block;
@@ -270,14 +274,6 @@ ol{
     box-shadow:0 0 15px 4px rgba(0,0,0,0.1);
     width: 70%;
     margin: auto;
-}
-
-.add-post{
-    max-width: 750px;
-    margin: auto;
-    background-color: white;
-    height: 93vh;
-    padding: 5vw 10vw;
 }
 
 .edit-delete-button.delete-post{
