--- a/sn/templates/add_post.html
+++ b/sn/templates/add_post.html
@@ -25,13 +25,21 @@
                     box-shadow: 6px 10px 9px 0px rgba(0, 0, 0, 0.75); 
                     padding: 15px;
                 }
+                .add-post{
+                    max-width: 750px;
+                    margin: auto;
+                    background-color: white;
+                    height: 93vh;
+                    padding: 2vw 10vw;
+                }
             </style>
         <form method="post" class="add-post">
-            <input name="title" id="title" placeholder="Нікнейм" class = "input-value" type="text" value="{{ request.form['title'] }}" style="width: 100%;"  required>
-            <br>
-            <label style="margin-top: 10px;">Текст посту:</label>
+            <h4 style="text-align: center;">Створити публікацію</h4>
+            <hr style="border-top: 2px solid #2A3A51; width: 300px;">
+            <textarea name="title" id="title" placeholder="Заголовок" class = "input-value" type="text" value="{{ request.form['title'] }}" style="width: 100%; resize: none; height: 100px;"  required></textarea>
+            <hr style="border-top: 2px solid #2A3A51; width: 300px;">
             
-            <textarea name="body" id="body"  class="input-value textarea" type="text" value="{{ request.form['body'] }}" style="width: 100%; height: 300px; resize: none;" required ></textarea>
+            <textarea name="body" id="body"  class="input-value textarea" type="text" value="{{ request.form['body'] }}" style="width: 100%; height: 300px; resize: none;" required placeholder="Текст публікації"></textarea>
             
             <!--
             <div id="body" name="body" value="{{ request.form['body'] }}" contenteditable="true" style="height: 50%; width: 100%; border: solid; border-width: 1px; text-align: left;" class="editorSheet"> </div>
