other users' pages are now available

--- a/sn/templates/blog.html
+++ b/sn/templates/blog.html
@@ -21,6 +21,10 @@
                 background-repeat: no-repeat;
                 background-size: cover;
             }
+            
+            .user-button:hover{
+                color: grey;
+            }
         </style>
         <div style="max-width: 1000px; margin: auto; background-color: white; padding-right: 80px; padding-left: 80px; margin-top: 0; min-height: 92vh; padding-top: 10px; padding-bottom: 15px;">
         <h5 style="text-align: center;">Нещодавні публікації</h5>
@@ -28,7 +32,7 @@
           {% if posts.first() %}
             <ul class="posts" style="padding: 0px;">
                 {% for post in posts|reverse %}
-                <hr style="border-top: 2px solid #2A3A51">
+                <hr style="border-top: 2px solid #2A3A51; margin-top: 0">
                     <li class="post" style="padding: 0px; list-style: none;">
                         <div style="margin-right: 30px; text-align: center; width: 96px; display: block;">
                             {% if photo[post.id] %}
@@ -36,19 +40,21 @@
                             {%  else %}
                             <i class="far fa-user-circle" style="text-align: center; font-size: 30px; margin: auto;"></i>
                             {%  endif %}
-                        <p style="text-align: center;">{{ author[post.id] }}</p>
+                        <form method="post">
+                        <input name = "u_id" id = "u_id" style="display: none;" value = "{{ author_id[post.id] }}">
+                            <button class="user-button" formaction="{{ url_for('other_users_page', id=author_id[post.id]) }}" style="border: 0; background-color: transparent;">{{ author[post.id] }}</button>
+                        </form>
                             </div>
                         <div>
                         <div style="display: flex; justify-content: space-between;">
-                        <p><b>{{ post.title }}</b></p>
-                        <form method="post">
-                    <input name = "p_id" id = "p_id" style="display:none;" value = "{{post.id}}">    
-                        
-                    </form>
+                            <p><b>{{ post.title }}</b></p>
+                            <form method="post">
+                                <input name = "p_id" id = "p_id" style="display:none;" value = "{{post.id}}">    
+                            </form>
                         </div>
                     <p style="text-align: justify;">{{ post.body }}</p>
                     
-                            </div>
+                        </div>
                     </li>
                 
                 <form method="post" style="display: flex; justify-content: space-between;">
