--- a/sn/templates/add_post.html
+++ b/sn/templates/add_post.html
@@ -33,12 +33,14 @@
                     padding: 2vw 10vw;
                 }
             </style>
-        <form method="post" class="add-post">
+        <form method="post" class="add-post" enctype="multipart/form-data">
             <h4 style="text-align: center;">Створити публікацію</h4>
             <hr style="border-top: 2px solid #2A3A51; width: 300px;">
             <textarea name="title" id="title" placeholder="Заголовок" class = "input-value" type="text" value="{{ request.form['title'] }}" style="width: 100%; resize: none; height: 100px;"  required></textarea>
             <hr style="border-top: 2px solid #2A3A51; width: 300px;">
-            
+
+            <!-- <input type="file" name="my_file[]" multiple> -->
+
             <textarea name="body" id="body"  class="input-value textarea" type="text" value="{{ request.form['body'] }}" style="width: 100%; height: 300px; resize: none;" required placeholder="Текст публікації"></textarea>
             
             <!--
