--- a/sn/templates/other_users_page.html
+++ b/sn/templates/other_users_page.html
@@ -82,6 +82,7 @@
             <div class="num">0</div>
         </div>
     </div>
+    <button style="margin-left: 30px; margin-top: 10px; background: none; border: 0;"><i class="fas fa-user-plus" style="margin-right: 4px;"></i> Підписатися</button>
 </div>
            
         
